# hermes-pet

./: .gitignore  LICENSE  README.md  debug.html  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.claude/skills/add-action/: SKILL.md
art/sprites/chibi/: .codegraph  curation.json  sprite-request.json
art/sprites/chibi-idle/: sprite-request.json
art/sprites/chibi-jet/: sprite-request.json
art/sprites/chibi-rocket/: sprite-request.json
art/sprites/simeong-edge/: sprite-request.json
art/sprites/simeong-edge2/: sprite-request.json
art/sprites/simeong-fall/: sprite-request.json
art/sprites/simeong-fall-glide/: sprite-request.json
art/sprites/simeong-fall-land/: sprite-request.json
art/sprites/simeong-fall-open/: sprite-request.json
art/sprites/simeong-idle/: sprite-request.json
art/sprites/simeong-idle2/: sprite-request.json
art/sprites/simeong-idle3/: sprite-request.json
art/sprites/simeong-jet/: sprite-request.json
art/sprites/simeong-rocket/: sprite-request.json
art/sprites/simeong-walk/: sprite-request.json
art/sprites/simeong-walk2/: sprite-request.json
public/: character.apng  walk.apng
public/packs/hermes/: edge.apng  fall.apng  idle.apng  jet.apng  rocket.apng
public/packs/simeong/: edge.2.apng  edge.apng  fall-glide.apng  fall-land.apng  fall-open.apng  fall.apng  idle.2.apng  idle.3.apng  idle.apng  (+4 more)
src/: debug.ts  main.ts  settings-store.ts  settings.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+34 files in other folders)
